--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,6 @@
     ],
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#ffffff"
+    "background_color": "#000d1a",
+    "theme_color": "#00569e"
 }
